# quick_md5check

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: publish.yml
conda.recipe/: meta.yaml
src/md5check/: __init__.py  __main__.py  cli.py  core.py
src/md5check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test_data/: checksums.md5  hello.txt
