[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quick_md5check"
version = "1.0.0"
description = "Multi-threaded MD5 checksum generator and verifier"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "lg10is1" },
]
dependencies = [
  "tqdm>=4.60.0",
]
keywords = ["md5", "checksum", "multi-threaded", "parallel"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/lg10is1/quick_md5check"
Repository = "https://github.com/lg10is1/quick_md5check"
BugTracker = "https://github.com/lg10is1/quick_md5check/issues"

[project.scripts]
md5check = "md5check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
